--- a/channel-sender/test/channel_sender_ex/test_config_files/config2.yaml
+++ b/channel-sender/test/channel_sender_ex/test_config_files/config2.yaml
@@ -26,7 +26,8 @@ channel_sender_ex:
     traces_enable: true
     traces_endpoint: "http://localhost:4318"
     traces_ignore_routes: [ "/health", "/metrics" ]
-
+  metrics:
+    active_interval_minutes_count: 1
 logger:
   level: debug
 
