--- a/.github/workflows/release-client-dart.yml
+++ b/.github/workflows/release-client-dart.yml
@@ -17,11 +17,11 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - uses: dart-lang/setup-dart@d6a63dab3335f427404425de0fbfed4686d93c4f
-      - name: Setup Flutter SDK
-        uses: flutter-actions/setup-flutter@v2
+      - name: Setup Flutter
+        uses: bancolombia/flutter-setup-action@v1.1
         with:
-          channel: stable
-          version: 3.10.6
+          channel: 'stable'
+          flutter-version: '3.35.0'
       - name: Install dependencies
         run: dart pub get
       - name: Publish to pub.dev
