ci: update working directory for pana

--- a/.github/workflows/build-client-dart.yaml
+++ b/.github/workflows/build-client-dart.yaml
@@ -31,6 +31,9 @@ jobs:
   pana:
     needs: [build]
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: clients/client-dart
 
     steps:
       - uses: actions/checkout@v3
