--- a/.github/workflows/build-client-dart.yaml
+++ b/.github/workflows/build-client-dart.yaml
@@ -17,6 +17,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
+      - name: 'Dependency Review'
+        uses: actions/dependency-review-action@v4
       - uses: dart-lang/setup-dart@d6a63dab3335f427404425de0fbfed4686d93c4f
       - name: Setup Flutter
         uses: bancolombia/flutter-setup-action@v1.1
