feat(upgrade): Update deprecated properties to current opentelemetry, update dependencies and example dependencies

--- a/.github/workflows/build-channel-sender.yaml
+++ b/.github/workflows/build-channel-sender.yaml
@@ -31,43 +31,43 @@ jobs:
       - name: Generate a token of Github APP
         id: generate_token
         if: github.ref == 'refs/heads/main'
-        uses: tibdex/github-app-token@3beb63f4bd073e61482598c45c71c1019b59b73a # v2.1.0
+        uses: actions/create-github-app-token@29824e69f54612133e76f7eaac726eef6c875baf # v2.2.1
         with:
-          app_id: ${{ secrets.APP_ID_ADMIN_GITHUB }}
-          private_key: ${{ secrets.APP_PRIVATE_KEY_ADMIN_GITHUB }}
-      - uses: actions/checkout@692973e3d937129bcbf40652eb9f2f61becf3332 # v4.1.7
+          app-id: ${{ secrets.APP_ID_ADMIN_GITHUB }}
+          private-key: ${{ secrets.APP_PRIVATE_KEY_ADMIN_GITHUB }}
+      - uses: actions/checkout@de0fac2e4500dabe0009e67214ff5f5447ce83dd # v6.0.2
         if: github.ref == 'refs/heads/main'
         with:
           token: ${{ steps.generate_token.outputs.token }}
-      - uses: actions/checkout@692973e3d937129bcbf40652eb9f2f61becf3332 # v4.1.7
+      - uses: actions/checkout@de0fac2e4500dabe0009e67214ff5f5447ce83dd # v6.0.2
         if: github.ref != 'refs/heads/main'
 
       - name: Verify Conventional Commits
-        uses: amannn/action-semantic-pull-request@0723387faaf9b38adef4775cd42cfd5155ed6017 # v5.5.3
+        uses: amannn/action-semantic-pull-request@48f256284bd46cdaab1048c3721360e808335d50 # v6.1.1
         if: github.event_name == 'pull_request' || github.event_name == 'pull_request_target'
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - name: Set up NodeJS
         if: github.ref == 'refs/heads/main'
-        uses: actions/setup-node@1e60f620b9541d16bece96c5465dc8ee9832be0b # v4.0.3
+        uses: actions/setup-node@6044e13b5dc448c55e2357c09f80417699197238 # v6.2.0
         with:
           node-version-file: './channel-sender/.nvmrc'
       - name: Set up Semantic Release
         if: github.ref == 'refs/heads/main'
-        run: npm -g install @semantic-release/git semantic-release@23.0.0
+        run: npm -g install @semantic-release/git semantic-release
       - name: Semantic Release
         if: github.ref == 'refs/heads/main'
-        run: npx semantic-release@23.0.0
+        run: npx semantic-release
         env:
           GITHUB_TOKEN: ${{ steps.generate_token.outputs.token }}
 
       - name: Set up Elixir
-        uses: erlef/setup-beam@v1.17.6
+        uses: erlef/setup-beam@e6d7c94229049569db56a7ad5a540c051a010af9 # v1.20.4
         with:
           version-type: strict
           version-file: "./channel-sender/.tool-versions"
       - name: Restore dependencies cache
-        uses: actions/cache@v4
+        uses: actions/cache@cdf6c1fa76f9f475f3d7449005a359c84ca0f306 # v5.0.3
         with:
           path: deps
           key: ${{ runner.os }}-mix-${{ hashFiles('**/mix.lock') }}
@@ -94,10 +94,10 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - name: Setup PR Report tool
         if: github.event_name == 'pull_request' || github.event_name == 'pull_request_target'
-        uses: hrishikesh-kadam/setup-lcov@v1
+        uses: hrishikesh-kadam/setup-lcov@6c1aa0cc9e1c02f9f58f01ac599f1064ccc83470 # v1.1.0
       - name: Validate code coverage
         if: github.event_name == 'pull_request' || github.event_name == 'pull_request_target'
-        uses: zgosalvez/github-actions-report-lcov@v3
+        uses: zgosalvez/github-actions-report-lcov@4eb99c09644c30cceb609413620bd9e1bf80ee79 # v6.0.1
         with:
           coverage-files: ./channel-sender/cover/lcov.info
           minimum-coverage: 70
