--- a/examples/back-async-java/gradle.properties
+++ b/examples/back-async-java/gradle.properties
@@ -1,8 +1,13 @@
 package=co.com.bancolombia
-systemProp.version=3.20.15
+systemProp.version=4.1.0
 reactive=true
 lombok=true
 metrics=true
 language=java
 org.gradle.parallel=true
+org.gradle.caching=true
+org.gradle.configuration-cache=true
+org.gradle.configuration-cache.parallel=true
+org.gradle.configuration-cache.integrity-check=false
+org.gradle.configuration-cache.read-only=false
 systemProp.sonar.gradle.skipCompile=true
