--- a/channel-sender/config/config-local.yaml
+++ b/channel-sender/config/config-local.yaml
@@ -94,6 +94,7 @@ channel_sender_ex:
     traces_endpoint: "http://localhost:4318"
     traces_ignore_routes: ["/health", "/metrics"]
   metrics:
+    enabled: true
     active_interval_minutes_count: 2
 logger:
   level: debug
