--- a/examples/back-async-java/applications/app-service/build.gradle
+++ b/examples/back-async-java/applications/app-service/build.gradle
@@ -1,8 +1,9 @@
 apply plugin: 'org.springframework.boot'
 
 dependencies {
+	testImplementation 'tools.jackson.core:jackson-databind'
 	implementation project(':async-event-bus')
-	testImplementation 'com.tngtech.archunit:archunit:1.3.0'
+	testImplementation 'com.tngtech.archunit:archunit:1.4.1'
 	implementation project(':rest-consumer')
 	implementation 'org.springframework.boot:spring-boot-starter-webflux'
 	implementation project(':reactive-web')
@@ -10,8 +11,8 @@ dependencies {
     implementation project(':usecase')
     implementation 'org.springframework.boot:spring-boot-starter'
     runtimeOnly('org.springframework.boot:spring-boot-devtools')
-    testImplementation 'com.tngtech.archunit:archunit:1.1.1'
-    testImplementation 'com.fasterxml.jackson.core:jackson-databind'
+    testImplementation 'com.tngtech.archunit:archunit:1.4.1'
+    testImplementation 'tools.jackson.core:jackson-databind'
 }
 
 tasks.register('explodedJar', Copy) {
