--- a/examples/back-async-java/infrastructure/driven-adapters/async-event-bus/build.gradle
+++ b/examples/back-async-java/infrastructure/driven-adapters/async-event-bus/build.gradle
@@ -1,7 +1,7 @@
 dependencies {
     implementation project(':model')
-    implementation 'io.cloudevents:cloudevents-json-jackson:4.0.1'
-    implementation 'org.reactivecommons:async-commons-rabbit-starter:5.2.3'
+    implementation 'io.cloudevents:cloudevents-core:4.0.1'
+    implementation 'org.reactivecommons:async-commons-rabbit-starter:7.0.4'
     implementation 'org.springframework:spring-context'
     implementation 'org.springframework.boot:spring-boot-autoconfigure'
     implementation 'org.springframework.boot:spring-boot-starter-webflux'
