--- a/examples/back-async-java/infrastructure/driven-adapters/rest-consumer/build.gradle
+++ b/examples/back-async-java/infrastructure/driven-adapters/rest-consumer/build.gradle
@@ -2,11 +2,12 @@ dependencies {
     implementation project(':model')
     implementation 'org.springframework:spring-context'
     implementation 'org.springframework.boot:spring-boot-starter-webflux'
-    implementation 'org.springframework.boot:spring-boot-starter-aop'
+    implementation 'org.springframework.boot:spring-boot-starter-aop:4.0.0-M2'
     implementation 'io.github.resilience4j:resilience4j-spring-boot3:2.3.0'
     implementation 'io.github.resilience4j:resilience4j-reactor:2.3.0'
+    implementation 'tools.jackson.core:jackson-databind'
     implementation 'io.micrometer:micrometer-core'
 
-    testImplementation 'com.squareup.okhttp3:okhttp:4.12.0'
-    testImplementation 'com.squareup.okhttp3:mockwebserver:4.12.0'
+    testImplementation 'com.squareup.okhttp3:okhttp:5.3.2'
+    testImplementation 'com.squareup.okhttp3:mockwebserver:5.3.2'
 }
