feat(client-js): module to NodeNext

--- a/clients/client-js/tsconfig.json
+++ b/clients/client-js/tsconfig.json
@@ -2,7 +2,8 @@
   "compilerOptions": {
     "baseUrl": ".",
     "paths": { "*": ["types/*"] },
-    "module": "es2020",
+    "module": "NodeNext",
+    "moduleResolution": "NodeNext",
     "target": "es2020",
     "declaration": true,
     "outDir": "./dist",
