--- a/.github/workflows/release-client-js.yml
+++ b/.github/workflows/release-client-js.yml
@@ -3,6 +3,9 @@ on:
   push:
     tags:
       - 'chanjs_*' # Push events to matching chanjs_*, i.e. chanjs_0.2.0
+permissions:
+  id-token: write  # Required for OIDC
+  contents: read
 jobs:
   build:
     defaults:
@@ -10,16 +13,14 @@ jobs:
         working-directory: clients/client-js
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v4
-    - uses: actions/setup-node@v4
+    - uses: actions/checkout@v6
+    - uses: actions/setup-node@v6
       with:
         node-version: '20.18.1'
         registry-url: 'https://registry.npmjs.org'
     - run: npm install
     - run: npm publish --access public
-      env:
-        NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
-    - uses: actions/setup-node@v4
+    - uses: actions/setup-node@v6
       with:
         registry-url: 'https://npm.pkg.github.com'
         scope: '@bancolombia'
